# ldp-personal-store

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py  upstream.py  vocab.py
app/auth/: deps.py  router.py  tokens.py
app/discovery/: log.py  router.py  stats.py
app/ldp/: containers.py  content.py  deps.py  router.py
app/policy/: enforce.py
app/sparql/: router.py
app/storage/: backend.py  filesystem.py  router.py  system.py
app/views/: binary.py  engine.py  model.py  rewrite.py  router.py
demo/: README.md  uc1-calendar.md  uc2-photos.md  uc3-notes.md  uc4-shopping.md  uc5-reading-list.md
docs/: index.html  vocab.html  vocab.ttl
ldp_common/: appkit.py  config.py  rdfcontent.py  tokenrecord.py  viewmodel.py  vocabulary.py
ldp_personal_store/: apidocs.py  app.py  bootstrap.py  config.py  main.py  upstream.py  vocab.py
ldp_personal_store/auth/: deps.py  router.py  tokens.py
ldp_personal_store/authentication/: dependencies.py  router.py  tokens_store.py
ldp_personal_store/discovery/: __init__.py  router.py  stats.py
ldp_personal_store/ldp/: containers.py  content.py  deps.py  router.py
ldp_personal_store/policy/: enforce.py
ldp_personal_store/sparql/: router.py
ldp_personal_store/storage/: backend.py  filesystem.py  router.py  system.py
ldp_personal_store/views/: bindings.py  engine.py  model.py  rewrite.py  router.py  submission.py
ldp_view_engine/: app.py  auth.py  authentication.py  bindings.py  client.py  discovery.py  engine.py  policy.py  rewrite.py  stats.py
penny/: .gitignore  README.md  proxy.py  run.sh
test-data/: README.md  seed.sh
test-data/.system/access-log/: K3HnYcigufA.ttl  uWnstbUKbUQ.ttl
test-data/.system/tokens/: XJWK7_UpwUo.ttl  admin.ttl  engine.ttl  uw-wxrBClKc.ttl
test-data/uc1-calendar/: policy-colleague.ttl  view-schedule-window.ttl  view-schedule.ttl
test-data/uc1-calendar/personal/: concert.ttl
test-data/uc1-calendar/work/: sprint-review.ttl  standup.ttl
test-data/uc2-photos/: beach-meta.ttl  city-meta.ttl  view-album.ttl
test-data/uc3-notes/: policy-classmate.ttl  view-lecture-notes.ttl
test-data/uc3-notes/linear-algebra/: eigenvalues.ttl  vectors.ttl
test-data/uc4-shopping/: list.ttl  view-shopping-list.ttl
test-data/uc5-reading-list/: view-reading-list.ttl
test-data/uc5-reading-list/entries/: martin2008.ttl  sambra2016.ttl  verborgh2016.ttl
test_data/: .ttl  README.md  policy-single-use.ttl  seed.sh
test_data/.system/access-log/: B_kxMdwHGt8.ttl  K3HnYcigufA.ttl  _Oe7hfcOuVA.ttl  uWnstbUKbUQ.ttl
test_data/.system/tokens/: XJWK7_UpwUo.ttl  admin.ttl  engine.ttl  uw-wxrBClKc.ttl
test_data/.system/views/: album.ttl  schedule.ttl
test_data/uc1-calendar/: policy-colleague.ttl  view-schedule-window.ttl  view-schedule.ttl
test_data/uc1-calendar/personal/: birthday-dinner.ttl  dentist.ttl  vacation-flight.ttl
test_data/uc1-calendar/work/: client-call.ttl  quarterly-planning.ttl
test_data/uc2-photos/: sunset-meta.ttl  view-album.ttl
test_data/uc3-notes/: policy-classmate.ttl  view-lecture-notes.ttl
test_data/uc3-notes/algorithms/: graph-search.ttl  sorting.ttl
test_data/uc3-notes/linear-algebra/: matrices.ttl
test_data/uc4-shopping/: list-week2.ttl  view-shopping-list.ttl
test_data/uc5-reading-list/: policy-review-group.ttl  view-reading-list.ttl
test_data/uc5-reading-list/entries/: berners-lee2001.ttl  speicher2015.ttl
testing_client/: README.md  app.js  client.js  index.html  rdf.js  styles.css
tests/: conftest.py  support.py  test_core.py  test_import_boundary.py
w3c_ldp_test_suite/: .gitignore  Dockerfile  README.md  auth_proxy.py  docker-compose.yml  logback.xml  run.sh
