[project]
name = "ldp_personal_store"
version = "0.1.0"
description = "Personal LDP pod: share query-defined slices of your data under revocable, policy-bounded credentials"
readme = "README.md"
authors = [
    { name = "LukasBerka", email = "lukasberkacek@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "rdflib>=7.6.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pyrefly>=1.0.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["."]
# The bundled W3C LDP Test Suite harness is not a part of the shipped package
extend-exclude = ["w3c_ldp_test_suite"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.pyrefly]
project-includes = ["ldp_personal_store", "tests"]
search-path = ["."]
python-version = "3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    # rdflib 7.6's own SPARQL evaluator and JSON-LD parser still call deprecated
    # Dataset/ConjunctiveGraph APIs internally; app code uses only supported API.
    # Module-scoped to rdflib so the same deprecations in app code stay visible.
    "ignore:Dataset.contexts is deprecated:DeprecationWarning:rdflib",
    "ignore:Dataset.default_context is deprecated:DeprecationWarning:rdflib",
    "ignore:ConjunctiveGraph is deprecated:DeprecationWarning:rdflib",
]
