[project]
name = "ldp-pod-workspace"
version = "0.1.0"
description = "Personal LDP pod: share query-defined slices of your data under revocable, policy-bounded credentials"
readme = "README.md"
authors = [
    { name = "LukasBerka", email = "lukasberkacek@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "ldp_pod",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
ldp_common = { workspace = true }
ldp_personal_store = { workspace = true }
ldp_view_engine = { workspace = true }
ldp_pod = { workspace = true }

[dependency-groups]
dev = [
    "pyrefly>=1.0.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = [
    "packages/ldp_common",
    "packages/ldp_personal_store",
    "packages/ldp_view_engine",
    "packages/ldp_pod",
    ".",
]
# The bundled W3C LDP Test Suite harness is not a part of the shipped packages
extend-exclude = ["w3c_ldp_test_suite"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.pyrefly]
project-includes = [
    "packages/ldp_common/ldp_common",
    "packages/ldp_personal_store/ldp_personal_store",
    "packages/ldp_view_engine/ldp_view_engine",
    "packages/ldp_pod/ldp_pod",
    "tests",
    "tests_internal",
]
search-path = [
    "packages/ldp_common",
    "packages/ldp_personal_store",
    "packages/ldp_view_engine",
    "packages/ldp_pod",
    ".",
]
python-version = "3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    # rdflib 7.6's own SPARQL evaluator and JSON-LD parser still call deprecated
    # Dataset/ConjunctiveGraph APIs internally; app code uses only supported API.
    # Module-scoped to rdflib so the same deprecations in app code stay visible.
    "ignore:Dataset.contexts is deprecated:DeprecationWarning:rdflib",
    "ignore:Dataset.default_context is deprecated:DeprecationWarning:rdflib",
    "ignore:ConjunctiveGraph is deprecated:DeprecationWarning:rdflib",
]
